--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,8 @@
 @import url(./components/table.css);
 @import url(./components/paging.css);
 @import url(./components/combobox.css);
+@import url(./components/dropdown.css);
+@import url(./components/radio.css);
 @import url(./layout/header.css);
 @import url(./layout/main-content.css);
 @import url(./layout/sidebar.css);
