--- a/css/components/input.css
+++ b/css/components/input.css
@@ -34,6 +34,6 @@
    
 }
 
-.m-input-icon-add{
-    background-image: url("../../assets/icon/search.png");
+.m-input-date-picker {
+    width: 260px;
 }
