--- a/css/layout/page.css
+++ b/css/layout/page.css
@@ -1,6 +1,7 @@
 body {
     padding: 0;
     margin: 0;
+    position: relative;
 }
 
 
@@ -18,7 +19,5 @@ body {
     float: left;
 }
 
-.m-dialog {
-    /* display: none; */
-}
+
 
