--- a/css/components/paging.css
+++ b/css/components/paging.css
@@ -1,14 +1,15 @@
 .m-paging {
-    height: 48px;
+    height: 50px;
     width: 100%;
     border-top: 1px solid #E0E0E0 ;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 16px;
-    position: absolute;
+    position: sticky;
     bottom: 0;
     box-sizing: border-box;
+    background-color: #fff;
 }
 
 .m-sum {
